--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -20,8 +20,8 @@
       <% }) %>
     </div>
   <% } %>
-  <div class="jumbotron p-4">
-    <p>Wanna host your event on eventifire? <a href="/auth/signup">Signup</a> Today!</p>
+  <div class="jumbotron p-4 mt-5">
+    <h4>Wanna host your event on eventifire? <a href="/auth/signup">Signup</a> Today!</h4>
   </div>
 </div>
 <%- include ../partials/footer.ejs%>
